--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,18 @@
   <name>bookExchangePortal Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>3.0.1</version>
-    <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
